@@ -6,6 +6,7 @@ import com.example.ragchatstorage.mapper.ChatMessageMapper;
 import com.example.ragchatstorage.model.ChatMessage;
 import com.example.ragchatstorage.model.ChatSession;
 import com.example.ragchatstorage.model.ContextItem;
+import com.example.ragchatstorage.model.SenderType;
 import com.example.ragchatstorage.repository.ChatMessageRepository;
 import com.example.ragchatstorage.repository.ChatSessionRepository;
 import lombok.RequiredArgsConstructor;
@@ -16,7 +17,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,22 +24,31 @@ public class ChatMessageService {
 
     private final ChatSessionRepository sessionRepository;
     private final ChatMessageRepository messageRepository;
-    private final ChatMessageMapper messageMapper;  // ✅ Added MapStruct mapper
+    private final ChatMessageMapper messageMapper;
 
     public ChatMessage addMessage(String sessionId, CreateMessageRequest request) {
         ChatSession session = sessionRepository.findById(sessionId)
                 .orElseThrow(() -> new NotFoundException("Session not found: " + sessionId));
 
-        // ✅ Using MapStruct mapper for entity conversion
         ChatMessage message = messageMapper.toEntity(request);
         message.setSessionId(session.getId());
         message.setCreatedAt(Instant.now());
 
-        // Convert context items using mapper
+        // Validate and set userId based on sender type
+        if (request.sender() == SenderType.USER) {
+            if (!session.getUserId().equals(request.userId())) {
+                throw new NotFoundException("User ID does not match session owner");
+            }
+            message.setUserId(request.userId());
+        } else {
+            // For ASSISTANT/SYSTEM messages, set userId to null
+            message.setUserId(null);
+        }
+
         if (request.context() != null) {
             List<ContextItem> contextItems = request.context().stream()
-                    .map(messageMapper::toEntity)
-                    .collect(Collectors.toList());
+                    .map(dto -> new ContextItem(dto.sourceId(), dto.snippet(), dto.metadata()))
+                    .toList();
             message.setContext(contextItems);
         }
 
